Fix link and btn blue color contrast (#28)

--- a/src/styles/variables/color.scss
+++ b/src/styles/variables/color.scss
@@ -4,7 +4,7 @@ $white: #fff;
 
 $blue-lightest: #f4f7f9;
 $blue-light: #d7e7f5;
-$blue: #2595e8;
+$blue: #1579c6;
 $blue-dark: #4d6b87;
 $blue-darkest: #05224b;
 $blue-2: #2d9cdb;
